updated some info

--- a/src/about.html
+++ b/src/about.html
@@ -102,17 +102,15 @@
             <!-- Collapse -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mt-4 mt-lg-0 ml-auto">
-                    <li class="nav-item ">
+                    <!-- <li class="nav-item ">
                         <a class="nav-link" href="index.html">Overview</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown dropdown-animate" data-toggle="hover">
                         <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu dropdown-menu-single">
-                            <a href="index.html" class="dropdown-item">Homepage</a>
                             <a href="about.html" class="dropdown-item">About us</a>
-                            <a href="contact.html" class="dropdown-item">Contact</a>
                             <div class="dropdown-divider"></div>
-                            <a href="login.html" class="dropdown-item">Login</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item ">
@@ -141,11 +139,11 @@
                     </h1>
                     <!-- Text -->
                     <p class="lead text-white opacity-8">
-                        For over 5 years, we pride ourselves on our commitment to excellence, as well as our ability to deliver for our customers.
+                        For over 2 years, we pride ourselves on our commitment to excellence, as well as our ability to deliver for our customers.
                     </p>
                     <!-- Buttons -->
                     <div class="mt-5">
-                        <a href="#" class="btn btn-warning btn-lg btn-icon">
+                        <a href="contact.html" class="btn btn-warning btn-lg btn-icon">
                             <span class="btn-inner--icon">
                                 <i data-feather="edit-3"></i>
                             </span>
@@ -173,12 +171,11 @@
                 </div>
                 <div class="col-lg-6">
                     <p class="lead lh-180">
-                        She exposed painted fifteen are noisier mistake led waiting. Surprise not wandered speedily husbands although yet end. Are court tiled cease young built fat one man taken. We highest ye friends is exposed equally in. Ignorant had
-                        too strictly followed.
+                        You get to choose your front-end framework from a wide range including ReactJS, NextJS, VueJS, AngularJS, Bootstrap, TailwindCSS, ChakraUI, MaterializeCSS, etc.
                     </p>
-                    <p class="lead lh-180">
+                    <!-- <p class="lead lh-180">
                         Form face evening above years for i fruitful us creature void days. Upon upon fruitful us fill earth was set tree above yielding to air image cattle seed night lesser saying. Gathered, fourth wherein air.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
@@ -213,7 +210,7 @@
             <div class="row row-grid">
                 <div class="col-lg-8">
                     <!-- Badge -->
-                    <span class="badge badge-warning badge-pill">Made with Bootstrap</span>
+                    <!-- <span class="badge badge-warning badge-pill">Made with Bootstrap</span> -->
                     <!-- Title -->
                     <h2 class="my-4 text-white">Websites, Dashboards and Web Apps</h2>
                     <!-- Text -->
@@ -229,7 +226,7 @@
                         <div class="col-sm-4">
                             <div class="card shadow-lg rounded-lg border-0 mb-sm-0">
                                 <div class="p-4 text-center text-sm-left">
-                                    <h3 class="mb-0">10k</h3>
+                                    <h3 class="mb-0">100+</h3>
                                     <p class="text-muted mb-0">
                                         Customers
                                     </p>
@@ -239,9 +236,9 @@
                         <div class="col-sm-4">
                             <div class="card shadow-lg rounded-lg border-0 mb-sm-0">
                                 <div class="p-4 text-center text-sm-left">
-                                    <h3 class="mb-0">55k</h3>
+                                    <h3 class="mb-0">590+</h3>
                                     <p class="text-muted mb-0">
-                                        Downloads
+                                        Websites
                                     </p>
                                 </div>
                             </div>
@@ -261,9 +258,8 @@
             </div>
         </div>
     </section>
-    <section class="slice slice-lg pb-5">
+    <!-- <section class="slice slice-lg pb-5">
         <div class="container">
-            <!-- Section title -->
             <div class="row mb-5 justify-content-center text-center">
                 <div class="col-lg-8 col-md-10">
                     <h2 class=" mt-4">The amazing team</h2>
@@ -378,7 +374,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="position-relative" id="footer-main">
         <div class="footer pt-lg-7 footer-dark bg-dark">
             <!-- SVG shape -->
