--- a/src/contact.html
+++ b/src/contact.html
@@ -78,7 +78,7 @@
                         We use cookies so that our themes work for you. By using our website, you agree to our use of cookies.
                     </p>
                     <!-- Buttons -->
-                    <a href="pages/utility/terms.html" class="btn btn-sm btn-white" target="_blank">Learn more</a>
+                    <a href="#" class="btn btn-sm btn-white" target="_blank">Learn more</a>
                     <button type="button" class="btn btn-sm btn-primary mr-2" data-dismiss="modal">OK</button>
                 </div>
             </div>
@@ -102,17 +102,15 @@
             <!-- Collapse -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mt-4 mt-lg-0 ml-auto">
-                    <li class="nav-item ">
+                    <!-- <li class="nav-item ">
                         <a class="nav-link" href="index.html">Overview</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown dropdown-animate" data-toggle="hover">
                         <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu dropdown-menu-single">
-                            <a href="index.html" class="dropdown-item">Homepage</a>
                             <a href="about.html" class="dropdown-item">About us</a>
-                            <a href="contact.html" class="dropdown-item">Contact</a>
                             <div class="dropdown-divider"></div>
-                            <a href="login.html" class="dropdown-item">Login</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item ">
@@ -142,7 +140,7 @@
                     </h1>
                     <!-- Text -->
                     <p class="lead text-white text-center text-lg-left opacity-8">
-                        Build a beautiful, modern website with flexible Bootstrap components built from scratch.
+                        We build beautiful modern websites with TailwaindCSS, Bootstrap, Chakra UI, Material UI and more.
                     </p>
                     <!-- Buttons -->
                     <div class="mt-5 text-center text-lg-left">
@@ -259,16 +257,14 @@
             </div>
         </div>
     </section>
-    <section class="slice slice-lg">
+    <!-- <section class="slice slice-lg">
         <div class="container text-center text-lg-left">
-            <!-- Title -->
             <div class="row">
                 <div class="col-lg-6 col-md-10">
                     <span class="badge badge-primary badge-pill">Support team</span>
                     <h5 class="h5 lh-180 mt-4 mb-6">Our support team is available 24/7 for any issues you might have with our products.</h5>
                 </div>
             </div>
-            <!-- Team -->
             <div class="row">
                 <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
                     <div data-animate-hover="2">
@@ -324,7 +320,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="slice slice-lg" id="sct-form-contact">
         <div class="container position-relative zindex-100">
             <div class="row justify-content-center mb-5">
