--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                         We use cookies so that our themes work for you. By using our website, you agree to our use of cookies.
                     </p>
                     <!-- Buttons -->
-                    <a href="pages/utility/terms.html" class="btn btn-sm btn-white" target="_blank">Learn more</a>
+                    <a href="#" class="btn btn-sm btn-white" target="_blank">Learn more</a>
                     <button type="button" class="btn btn-sm btn-primary mr-2" data-dismiss="modal">OK</button>
                 </div>
             </div>
@@ -102,17 +102,16 @@
             <!-- Collapse -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mt-4 mt-lg-0 ml-auto">
-                    <li class="nav-item ">
+                    <!-- <li class="nav-item ">
                         <a class="nav-link" href="index.html">Overview</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown dropdown-animate" data-toggle="hover">
                         <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu dropdown-menu-single">
-                            <a href="index.html" class="dropdown-item">Homepage</a>
                             <a href="about.html" class="dropdown-item">About us</a>
-                            <a href="contact.html" class="dropdown-item">Contact</a>
                             <div class="dropdown-divider"></div>
-                            <a href="login.html" class="dropdown-item">Login</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
+                            <!-- <a href="login.html" class="dropdown-item">Login</a> -->
                         </div>
                     </li>
                     <li class="nav-item ">
@@ -143,11 +142,11 @@
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 pr-md-5">
                     <!-- Heading -->
                     <h1 class="display-4 text-center text-md-left mb-3">
-                        It's time to amplify your <strong class="text-primary">online business</strong>
+                        It's time to amplify the UI design of your <strong class="text-primary">online website</strong>
                     </h1>
                     <!-- Text -->
                     <p class="lead text-center text-md-left text-muted">
-                        Build a beautiful, modern website with flexible Bootstrap components built from scratch.
+                        We build beautiful modern websites with TailwaindCSS, Bootstrap, Chakra UI, Material UI and more.
                     </p>
                     <!-- Buttons -->
                     <!-- <div class="text-center text-md-left mt-5">
@@ -167,9 +166,9 @@
             <!-- Section title -->
             <div class="row mb-5 justify-content-center text-center">
                 <div class="col-lg-6">
-                    <span class="badge badge-soft-success badge-pill badge-lg">
+                    <a href="contact.html"><span class="badge badge-soft-success badge-pill badge-lg">
                         Get started
-                    </span>
+                    </span></a>
                     <h2 class=" mt-4">Carefuly crafted components ready to use in your project</h2>
                     <div class="mt-2">
                         <p class="lead lh-180">Use Atomic Design to build components, sections and, then, pages.</p>
@@ -184,8 +183,8 @@
                             <div class="pt-4 pb-5">
                                 <img src="assets/img/svg/illustrations/illustration-5.svg" class="img-fluid img-center" style="height: 150px;" alt="Illustration" />
                             </div>
-                            <h5 class="h4 lh-130 mb-3">Unleash you creativity</h5>
-                            <p class="text-muted mb-0">Relacsui Website UI Kit contains components and pages that are easy to customize and change.</p>
+                            <h5 class="h4 lh-130 mb-3">Sit back and Relax</h5>
+                            <p class="text-muted mb-0">We build components and pages that are easy to customize and change.</p>
                         </div>
                     </div>
                 </div>
@@ -196,7 +195,7 @@
                                 <img src="assets/img/svg/illustrations/illustration-6.svg" class="img-fluid img-center" style="height: 150px;" alt="Illustration" />
                             </div>
                             <h5 class="h4 lh-130 mb-3">Get more results</h5>
-                            <p class="text-muted mb-0">Relacsui Website UI Kit contains components and pages that are easy to customize and change.</p>
+                            <p class="text-muted mb-0">We perform SEO practices to rank your site on the top.</p>
                         </div>
                     </div>
                 </div>
@@ -207,7 +206,7 @@
                                 <img src="assets/img/svg/illustrations/illustration-7.svg" class="img-fluid img-center" style="height: 150px;" alt="Illustration" />
                             </div>
                             <h5 class="h4 lh-130 mb-3">Increase your audience</h5>
-                            <p class="text-muted mb-0">Relacsui Website UI Kit contains components and pages that are easy to customize and change.</p>
+                            <p class="text-muted mb-0">We build pages which have high audience retention time.</p>
                         </div>
                     </div>
                 </div>
@@ -248,6 +247,18 @@
                                     </div>
                                 </div>
                             </li>
+                             <li class="py-2">
+                                <div class="d-flex align-items-center">
+                                    <div>
+                                        <div class="icon icon-shape bg-primary text-white icon-sm rounded-circle mr-3">
+                                            <i class="fas fa-store-alt"></i>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <span class="h6 mb-0">Designed for every devices</span>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-lg-6 order-lg-1">
@@ -264,9 +275,9 @@
                     <div class="col-lg-5">
                         <h5 class="h3">A modern project management dashboard</h5>
                         <p class="lead my-4">
-                            With Relacsui you get components and examples, including tons of variables that will help you customize this theme with ease.
+                            Wanna customize? Just give us a call and get it done for <b>FREE!</b>
                         </p>
-                        <ul class="list-unstyled mb-0">
+                        <!-- <ul class="list-unstyled mb-0">
                             <li class="py-2">
                                 <div class="d-flex align-items-center">
                                     <div>
@@ -303,7 +314,7 @@
                                     </div>
                                 </div>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div class="col-lg-6">
                         <div class="card mb-0 ml-lg-5">
@@ -334,7 +345,7 @@
                             </h2>
                             <h4 class="text-white mt-3">Create your own experience</h4>
                             <!-- Play button -->
-                            <a href="#" class="btn btn-primary btn-icon mt-4">Learn more</a>
+                            <a href="contact.html" class="btn btn-primary btn-icon mt-4">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -353,7 +364,7 @@
                             <div class="pl-4">
                                 <h5 class="lh-130">Listen to the nature</h5>
                                 <p class="text-muted mb-0">
-                                    Design made simple with a clean and smart HTML markup.
+                                    We have added new templates that are inspired by nature.
                                 </p>
                             </div>
                         </div>
@@ -368,7 +379,7 @@
                             <div class="pl-4">
                                 <h5 class="lh-130">Rules not to follow</h5>
                                 <p class="text-muted mb-0">
-                                    Design made simple with a clean and smart HTML markup.
+                                    No Advance payment! No headache! Get your site demo video and then pay for it.
                                 </p>
                             </div>
                         </div>
@@ -381,9 +392,9 @@
                                 <span class="badge badge-danger badge-pill">Update</span>
                             </div>
                             <div class="pl-3">
-                                <h5 class="lh-130">Beware the water</h5>
+                                <h5 class="lh-130">No more vanilla CSS!</h5>
                                 <p class="text-muted mb-0">
-                                    Design made simple with a clean and smart HTML markup.
+                                    We don't use simple vanilla CSS any more.
                                 </p>
                             </div>
                         </div>
@@ -398,9 +409,9 @@
                                 <span class="badge badge-warning badge-pill">New</span>
                             </div>
                             <div class="pl-4">
-                                <h5 class="lh-130">Listen to the nature</h5>
+                                <h5 class="lh-130">Customizable templates added</h5>
                                 <p class="text-muted mb-0">
-                                    Design made simple with a clean and smart HTML markup.
+                                    Now, you can pick a template from a huge collection and customize it.
                                 </p>
                             </div>
                         </div>
@@ -413,9 +424,9 @@
                                 <span class="badge badge-success badge-pill">Tips</span>
                             </div>
                             <div class="pl-4">
-                                <h5 class="lh-130">Rules not to follow</h5>
+                                <h5 class="lh-130">Your site, your choice</h5>
                                 <p class="text-muted mb-0">
-                                    Design made simple with a clean and smart HTML markup.
+                                    Get the desired framework to be used for your site.
                                 </p>
                             </div>
                         </div>
@@ -428,9 +439,9 @@
                                 <span class="badge badge-danger badge-pill">Update</span>
                             </div>
                             <div class="pl-3">
-                                <h5 class="lh-130">Beware the water</h5>
+                                <h5 class="lh-130">Support for Nextjs added</h5>
                                 <p class="text-muted mb-0">
-                                    Design made simple with a clean and smart HTML markup.
+                                    Now power up your react site with Nextjs.
                                 </p>
                             </div>
                         </div>
@@ -444,7 +455,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <span class="badge badge-primary badge-pill">Key features</span>
-                    <h5 class="lh-180 mt-4 mb-6">Relacsui is a premium HTML template that includes adaptable components and pages for various industries, plus new ones each month.</h5>
+                    <h5 class="lh-180 mt-4 mb-6">Relacsui includes adaptable components and pages for various industries.</h5>
                 </div>
             </div>
             <!-- Features -->
@@ -461,7 +472,7 @@
                             <div>
                                 <span class="h6">100% Responsive</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    No compromise with compromise.
                                 </p>
                             </div>
                         </div>
@@ -476,9 +487,9 @@
                                 </div>
                             </div>
                             <div>
-                                <span class="h6">Based on Bootstrap 4</span>
+                                <span class="h6">Based on CSS Frameworks</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    TailwaindCSS, Bootstrap, Materialize, Chakra and more!
                                 </p>
                             </div>
                         </div>
@@ -495,7 +506,7 @@
                             <div>
                                 <span class="h6">Built with SASS</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    Pre-processing is important.
                                 </p>
                             </div>
                         </div>
@@ -527,9 +538,9 @@
                                 </div>
                             </div>
                             <div>
-                                <span class="h6">23+ widgets</span>
+                                <span class="h6">93+ widgets</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    For fulfilling your every need.
                                 </p>
                             </div>
                         </div>
@@ -544,9 +555,9 @@
                                 </div>
                             </div>
                             <div>
-                                <span class="h6">Bootstrap Flexbox Grid</span>
+                                <span class="h6">No Advance payment</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    Pay only when you get to see the website demo and are satisfied.
                                 </p>
                             </div>
                         </div>
@@ -566,7 +577,7 @@
                             <div>
                                 <span class="h6">Animate CSS</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    Be like water! Don't be static.
                                 </p>
                             </div>
                         </div>
@@ -585,7 +596,7 @@
                             <div>
                                 <span class="h6">Integrated plugins</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    Customization is the key to success.
                                 </p>
                             </div>
                         </div>
@@ -602,9 +613,9 @@
                                 </div>
                             </div>
                             <div>
-                                <span class="h6">Smart HTML markup</span>
+                                <span class="h6">Get your desired framework</span>
                                 <p class="text-sm text-muted mb-0">
-                                    Built to be customized.
+                                    React, Next, Vue, Angular and many more.
                                 </p>
                             </div>
                         </div>
@@ -623,7 +634,7 @@
                     </h2>
                     <!-- Text -->
                     <p class="text-muted">
-                        Thousands of developers around the world have already made Quick the main tool for building websites.
+                        Thousands of developers around the world have already made Relacsui the main tool for building websites.
                     </p>
                 </div>
             </div>
@@ -669,7 +680,7 @@
                 <p class="mb-2">
                     Both pricings contains all 6 months free support. Need more?
                 </p>
-                <a href="#" class="text-primary text-underline--dashed">Contact us<i data-feather="arrow-right" class="ml-2"></i></a>
+                <a href="contact.html" class="text-primary text-underline--dashed">Contact us<i data-feather="arrow-right" class="ml-2"></i></a>
             </div>
         </div>
     </section>
@@ -718,27 +729,25 @@
                     <div class="col-lg-2 col-6 col-sm-4 ml-lg-auto mb-5 mb-lg-0">
                         <h6 class="heading mb-3">Account</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#">Profile</a></li>
-                            <li><a href="#">Settings</a></li>
-                            <li><a href="#">Billing</a></li>
+                            <li><a href="contact.html">Support</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Billing</a></li>
                             <li><a href="#">Notifications</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-6 col-sm-4 mb-5 mb-lg-0">
                         <h6 class="heading mb-3">About</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact.html">Services</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                             <li><a href="#">Careers</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-6 col-sm-4 mb-5 mb-lg-0">
                         <h6 class="heading mb-3">Company</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#">Community</a></li>
-                            <li><a href="#">Help center</a></li>
-                            <li><a href="#">Support</a></li>
+                            <li><a href="about.html">Community</a></li>
+                            <li><a href="contact.html">Help center</a></li>
                         </ul>
                     </div>
                 </div>
