--- a/src/contact.html
+++ b/src/contact.html
@@ -193,10 +193,10 @@
                                 </div>
                             </div>
                             <h5 class="">Sales department</h5>
-                            <p class=" mt-2 mb-0">Lorem ipsum dolor
-                                sit amet consectetur adipiscing.</p>
+                            <!-- <p class=" mt-2 mb-0">Lorem ipsum dolor
+                                sit amet consectetur adipiscing.</p> -->
                             <div class="mt-4">
-                                <a href="#" class="link-underline-warning">sales@example.com</a>
+                                <a href="mailto:ivanshajpoonia@gmail.com" class="link-underline-warning">ivanshajpoonia@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -210,10 +210,10 @@
                                 </div>
                             </div>
                             <h5 class="">Technical support</h5>
-                            <p class=" mt-2 mb-0">Lorem ipsum dolor
-                                sit amet consectetur adipiscing.</p>
+                            <!-- <p class=" mt-2 mb-0">Lorem ipsum dolor
+                                sit amet consectetur adipiscing.</p> -->
                             <div class="mt-4">
-                                <a href="#" class="link-underline-warning">support@example.com</a>
+                                <a href="mailto:ivanshajpoonia@gmail.com" class="link-underline-warning">ivanshajpoonia@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -227,10 +227,10 @@
                                 </div>
                             </div>
                             <h5 class="">Custom projects</h5>
-                            <p class=" mt-2 mb-0">Lorem ipsum dolor sit
-                                amet consectetur adipiscing.</p>
+                            <!-- <p class=" mt-2 mb-0">Lorem ipsum dolor sit
+                                amet consectetur adipiscing.</p> -->
                             <div class="mt-4">
-                                <a href="#" class="link-underline-warning">project@example.com</a>
+                                <a href="mailto:ivanshajpoonia@gmail.com" class="link-underline-warning">ivanshajpoonia@gmail.com</a>
                             </div>
                         </div>
                     </div>
