tried different email sender

--- a/src/contact.html
+++ b/src/contact.html
@@ -332,9 +332,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <!-- Form -->
-                    <form action="https://formspree.io/f/mlezdvjr" method="POST">
+                    <form action="https://formsubmit.co/ivanshajpoonia@gmail.com" method="POST">
+                        <input type="hidden" name="_subject" value="Relacs UI Contact form!">
                         <div class="form-group">
-                            <input class="form-control form-control-lg" type="text" name="username" placeholder="Your name" required>
+                            <input class="form-control form-control-lg" type="text" name="name" placeholder="Your name" required>
                         </div>
                         <div class="form-group">
                             <input class="form-control form-control-lg" type="email" name="emailid" placeholder="email@example.com" required>
@@ -343,7 +344,7 @@
                             <input class="form-control form-control-lg" type="text" name="contact" placeholder="+40-745-234-567" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control form-control-lg" name="message" placeholder="Tell us a few words ..." rows="3" required></textarea>
+                            <textarea class="form-control form-control-lg" type = "text"name="message" placeholder="Tell us a few words ..." rows="3" required></textarea>
                         </div>
                         <div class="text-center">
                             <!-- <div class="g-recaptcha" data-sitekey="6Lfs5ScUAAAAANAJwGrdfvWLFRRiVbKRE2vfoaFj"></div> -->
