--- a/src/contact.html
+++ b/src/contact.html
@@ -341,7 +341,7 @@
                             <input class="form-control form-control-lg" type="email" name="emailid" placeholder="email@example.com" required>
                         </div>
                         <div class="form-group">
-                            <input class="form-control form-control-lg" type="text" name="contact" placeholder="+40-745-234-567" required>
+                            <input class="form-control form-control-lg" type="text" name="contact" placeholder="+91 824001234012" required>
                         </div>
                         <div class="form-group">
                             <textarea class="form-control form-control-lg" type = "text"name="message" placeholder="Tell us a few words ..." rows="3" required></textarea>
